<resources>
    <string name="app_name">Two Activities</string>
    <string name="button_label_send">Send</string>
    <string name="activity2_name">Second Activity</string>
    <string name="text_header">Message Received</string>
    <string name="editText_main">Enter Your Message Here</string>
    <string name="button_second">Reply</string>
    <string name="editText_second">Enter Your Reply Here</string>
    <string name="text_header_reply">Reply Received</string>
    <string name="empty_message_alert">You have to write something bro!</string>
    <string name="error_alert">Error!</string>
</resources>
